@@ -5,12 +5,12 @@ import com.studyspaces.spacefinder.repository.HistoricOccupancyRepository;
 import com.studyspaces.spacefinder.repository.RealTimeOccupancyRepository;
 import com.studyspaces.spacefinder.model.*;
 
+import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.data.mongodb.core.query.Criteria;
@@ -20,8 +20,6 @@ import org.springframework.data.mongodb.core.query.Update;
 
 /**
  * OccupancyManager
- *
- *
  */
 
 @Service
@@ -71,6 +69,31 @@ public class OccupancyManager {
         return (now - lastTimestamp) / 1000; // return seconds
     }
 
+    // Returns the average occupancy for a room from the last 7 days
+    public Occupancy get7DayAverage(String roomId) {
+        long sevenDaysAgo = System.currentTimeMillis() - 7 * 24 * 60 * 60 * 1000;
+
+        Optional<RoomOccupancyRecord> optionalRoom = repo.findById(roomId);
+        if (optionalRoom.isEmpty()) return null;
+
+        RoomOccupancyRecord room = optionalRoom.get();
+
+        if(room.getRecords() == null || room.getRecords().isEmpty()) return null;
+
+        List<OccupancyRecord> recentRecords = room.getRecords().stream()
+                .filter(r -> r.getTimestamp() > sevenDaysAgo)
+                .toList();
+
+        if (recentRecords.isEmpty()) return null;
+
+        double average = recentRecords.stream()
+                .mapToInt(r -> occupancyToValue((r.getOccupancyLevel())))
+                .average().orElse(0);
+
+        return valueToOccupancy(average);
+    }
+
+
     // ===========================
     // Write Requests
     // ===========================
@@ -112,7 +135,13 @@ public class OccupancyManager {
         return true;
     }
 
-    // If an OccupancyRecord > 7 days, archive record
+
+    // ===========================
+    // Data Transfers
+    // ===========================
+
+    // If an OccupancyRecord > 7 days, archive record. Runs daily
+    @Scheduled(cron = "0 0 3 * * ?")
     public void archiveOccupancyRecord(){
 
         long sevenDaysAgo = System.currentTimeMillis() - 7 * 24 * 60 * 60 * 1000;
@@ -123,7 +152,7 @@ public class OccupancyManager {
 
             List<OccupancyRecord> oldRecords = room.getRecords().stream()
                     .filter(o -> o.getTimestamp() < sevenDaysAgo)
-                    .collect(Collectors.toList());
+                    .toList();
 
             // Archive room
             RoomOccupancyRecord historicRoom = historicRepo.findById(room.getId())
@@ -139,5 +168,30 @@ public class OccupancyManager {
 
         }
 
+    }
+
+
+    // ===========================
+    // Helper Functions
+    // ===========================
+
+    // Helper functions for get7DayAverage()
+    private int occupancyToValue(Occupancy occupancy) {
+        return switch (occupancy) {
+            case EMPTY -> 0;
+            case FREE -> 1;
+            case MODERATE -> 2;
+            case BUSY -> 3;
+        };
+    }
+    private Occupancy valueToOccupancy(double value) {
+        int rounded = (int) Math.round(value);
+
+        return switch (rounded) {
+            case 0 -> Occupancy.EMPTY;
+            case 1 -> Occupancy.FREE;
+            case 3 -> Occupancy.BUSY;
+            default -> Occupancy.MODERATE;
+        };
     }
 }
